--- a/src/app/book-card/book-card.component.html
+++ b/src/app/book-card/book-card.component.html
@@ -26,7 +26,7 @@
   </div>
 </div>
 
-<div class="container">
+<div *ngIf="authService.isUserInRole('ROLE_ADMIN')" class="container">
   <button type="button" class="btn btn-primary mx-2" data-bs-toggle="modal" data-bs-target="#addBookModal" data-bs-whatever="@getbootstrap">Add new books</button>
   <app-book-add-modal (addBookEvent)="onAddBook($event)"></app-book-add-modal>
 </div>
