--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -36,30 +36,33 @@
                   <h4 class="mt-1 mb-5 pb-1">We are The Lotus Team</h4>
                 </div>
 
-                <form>
+                <p>{{message}}</p>
+
+                <form (ngSubmit)="login()" #loginForm="ngForm">
                   <p>Please login to your account</p>
 
                   <div class="form-outline mb-4">
-                    <input type="email" id="form2Example11" class="form-control"
-                      placeholder="Phone number or email address" />
-                    <label class="form-label" for="form2Example11">Username</label>
+                    <input type="text" id="username" name="username" class="form-control" [(ngModel)]="username" required />
+                    <label class="form-label" for="username">Username</label>
                   </div>
-
+    
+    
                   <div class="form-outline mb-4">
-                    <input type="password" id="form2Example22" class="form-control" />
-                    <label class="form-label" for="form2Example22">Password</label>
+                    <input type="password" id="password" name="password" class="form-control" [(ngModel)]="password"
+                      required />
+                    <label class="form-label" for="password">Password</label>
                   </div>
 
                   <div class="text-center pt-1 mb-5 pb-1">
-                    <button class="btn btn-primary btn-block fa-lg gradient-custom-3 mb-3" type="button">Log
+                    <button class="btn btn-primary btn-block fa-lg gradient-custom-3 mb-3" type="submit" [disabled]="!loginForm.form.valid">Log
                       in</button>
                       <br>
-                    <a class="text-muted" href="#!">Forgot password?</a>
+                    <!-- <a class="text-muted" href="#!">Forgot password?</a> -->
                   </div>
 
                   <div class="d-flex align-items-center justify-content-center pb-4">
                     <p class="mb-0 me-2">Don't have an account?</p>
-                    <button type="button" class="btn btn-outline-danger">Create new</button>
+                    <button (click)="signup()" type="button" class="btn btn-outline-primary">Create new</button>
                   </div>
 
                 </form>
@@ -81,7 +84,7 @@
   </div>
 </section>
 
-<section class="vh-100">
+<!-- <section class="vh-100">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
@@ -116,4 +119,4 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
