Rebrand the library

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -33,7 +33,7 @@
                 <div class="text-center">
                   <img src="assets/book-16 (1).svg"
                     style="width: 185px;" alt="logo">
-                  <h4 class="mt-1 mb-5 pb-1">We are The Lotus Team</h4>
+                  <!-- <h4 class="mt-1 mb-5 pb-1">BookMate</h4> -->
                 </div>
 
                 <p>{{message}}</p>
@@ -71,10 +71,8 @@
             </div>
             <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
               <div class="text-white px-3 py-4 p-md-5 mx-md-4">
-                <h4 class="mb-4">We are more than just a company</h4>
-                <p class="small mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                  exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h4 class="mb-4">Discover, Review, and Connect with Your Next Favorite Book</h4>
+                <p class="small mb-0">BookMate is an online platform designed for book lovers. It allows users to search for books across various genres and authors. Users can like and review books, providing a platform for open discussion and critique.</p>
               </div>
             </div>
           </div>
